<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_score"
            android:title="@string/Score" />
        <item
            android:id="@+id/nav_togel"
            android:icon="@drawable/ic_menu_togel"
            android:title="@string/Togel" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_money"
            android:title="@string/Deposit" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_withdraw"
            android:title="@string/Withdraw" />
        <item
            android:id="@+id/nav_daftar"
            android:icon="@drawable/ic_menu_daftar"
            android:title="@string/Daftar" />
    </group>
</menu>