<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="net.simplifiedlearning.volleymysqlexample.ui.home.HomeFragment"
        android:label="@string/Score"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="net.simplifiedlearning.volleymysqlexample.ui.gallery.GalleryFragment"
        android:label="@string/Deposit"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="net.simplifiedlearning.volleymysqlexample.ui.slideshow.SlideshowFragment"
        android:label="@string/Withdraw"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_daftar"
        android:name="net.simplifiedlearning.volleymysqlexample.ui.daftar.DaftarFragment"
        android:label="@string/Daftar"
        tools:layout="@layout/fragment_daftar" />

    <fragment
        android:id="@+id/nav_togel"
        android:name="net.simplifiedlearning.volleymysqlexample.ui.togel.TogelFragment"
        android:label="@string/Togel"
        tools:layout="@layout/fragment_togel" />
</navigation>